syntax = "proto3";

package com.pocketcasts.service.api;

option java_package = "com.pocketcasts.service.api";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message SyncUpdateRequest {
  int64 device_utc_time_ms = 1;
  int64 last_modified = 2;
  reserved 3; // string country
  string device_id = 4;
  repeated Record records = 5;
}

message SyncUpdateResponse {
  int64 last_modified = 1;
  repeated Record records = 2;
}

message Record {
  oneof record {
    SyncUserPodcast podcast = 1;
    SyncUserEpisode episode = 2;
    SyncUserPlaylist playlist = 3;
    SyncUserDevice device = 4;
    SyncUserFolder folder = 5;
    SyncUserBookmark bookmark = 6;
  }
}

message SyncUserPodcast {
  string uuid = 1;
  google.protobuf.BoolValue is_deleted = 2;
  google.protobuf.BoolValue subscribed = 3;
  google.protobuf.Int32Value auto_start_from = 4;
  google.protobuf.Int32Value episodes_sort_order = 5;
  google.protobuf.Int32Value auto_skip_last = 6;
  google.protobuf.StringValue folder_uuid = 7;
  google.protobuf.Int32Value sort_position = 8;
  google.protobuf.Timestamp date_added = 9;
  reserved 10; // PodcastSettings settings
}

message SyncUserEpisode {
  string uuid = 1;
  string podcast_uuid = 2;
  google.protobuf.BoolValue is_deleted = 3;
  google.protobuf.Int64Value is_deleted_modified = 4;
  google.protobuf.Int64Value duration = 5;
  google.protobuf.Int64Value duration_modified = 6;
  google.protobuf.Int32Value playing_status = 7;
  google.protobuf.Int64Value playing_status_modified = 8;
  google.protobuf.Int64Value played_up_to = 9;
  google.protobuf.Int64Value played_up_to_modified = 10;
  google.protobuf.BoolValue starred = 11;
  google.protobuf.Int64Value starred_modified = 12;
  string deselected_chapters = 13;
  google.protobuf.Int64Value deselected_chapters_modified = 14;
}

message SyncUserDevice {
  google.protobuf.StringValue device_id = 1;
  google.protobuf.Int32Value device_type = 2;
  google.protobuf.Int64Value times_started_at = 3;
  google.protobuf.Int64Value time_silence_removal = 4;
  google.protobuf.Int64Value time_variable_speed = 5;
  google.protobuf.Int64Value time_intro_skipping = 6;
  google.protobuf.Int64Value time_skipping = 7;
  google.protobuf.Int64Value time_listened = 8;
}

message SyncUserPlaylist {
  string uuid = 1;
  google.protobuf.BoolValue is_deleted = 2;
  google.protobuf.StringValue title = 3;
  google.protobuf.BoolValue all_podcasts = 4;
  google.protobuf.StringValue podcast_uuids = 5;
  reserved 6; // google.protobuf.StringValue episode_uuids
  google.protobuf.Int32Value audio_video = 7;
  google.protobuf.BoolValue not_downloaded = 8;
  google.protobuf.BoolValue downloaded = 9;
  reserved 10; // google.protobuf.BoolValue downloading
  google.protobuf.BoolValue finished = 11;
  google.protobuf.BoolValue partially_played = 12;
  google.protobuf.BoolValue unplayed = 13;
  google.protobuf.BoolValue starred = 14;
  google.protobuf.BoolValue manual = 15;
  google.protobuf.Int32Value sort_position = 16;
  google.protobuf.Int32Value sort_type = 17;
  google.protobuf.Int32Value icon_id = 18;
  google.protobuf.Int32Value filter_hours = 19;
  string original_uuid = 20;
  google.protobuf.BoolValue filter_duration = 21;
  google.protobuf.Int32Value longer_than = 22;
  google.protobuf.Int32Value shorter_than = 23;
}

message SyncUserFolder {
  string folder_uuid = 1;
  bool is_deleted = 2;
  string name = 3;
  int32 color = 4;
  int32 sort_position = 5;
  int32 podcasts_sort_type = 6;
  google.protobuf.Timestamp date_added = 7;
}

message SyncUserBookmark {
  string bookmark_uuid = 1;
  string podcast_uuid = 2;
  string episode_uuid = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Int32Value time = 5;
  google.protobuf.StringValue title = 6;
  google.protobuf.Int64Value title_modified = 7;
  google.protobuf.BoolValue is_deleted = 8;
  google.protobuf.Int64Value is_deleted_modified = 9;
}

message BookmarkRequest {
  string podcast_uuid = 1;
  string episode_uuid = 2;
  google.protobuf.Int32Value time = 3;
  google.protobuf.StringValue title = 4;
}

message BookmarkResponse {
  string bookmark_uuid = 1;
  string podcast_uuid = 2;
  string episode_uuid = 3;
  int32 time = 5;
  string title = 6;
  google.protobuf.Timestamp createdAt = 7;
}

message BookmarksResponse {
  repeated BookmarkResponse bookmarks = 1;
}

message UserPodcastListRequest {
  string v = 1;
  string m = 2;
}

message UserPodcastListResponse {
  repeated UserPodcastResponse podcasts = 1;
  repeated PodcastFolder folders = 2;
}

message UserPodcastResponse {
  string uuid = 1;
  int32 episodes_sort_order = 2;
  int32 auto_start_from = 3;
  reserved 4; // string title
  reserved 5; // string author
  reserved 6; // string description
  reserved 7; // string url
  reserved 8; // google.protobuf.Timestamp last_episode_published
  reserved 9; // bool unplayed
  reserved 10; // string last_episode_uuid
  reserved 11; // int32 last_episode_playing_status
  reserved 12; // bool last_episode_archived
  int32 auto_skip_last = 13;
  google.protobuf.StringValue folder_uuid = 14;
  google.protobuf.Int32Value sort_position = 15;
  google.protobuf.Timestamp date_added = 16;
  reserved 17; // PodcastSettings settings
  reserved 18; // string description_html
  reserved 19; // google.protobuf.BoolValue is_private
  reserved 20; // string slug
}

message PodcastFolder {
  string folder_uuid = 1;
  string name = 2;
  int32 color = 3;
  int32 sort_position = 4;
  int32 podcasts_sort_type = 5;
  google.protobuf.Timestamp date_added = 6;
}

message UserPlaylistListRequest {
  string v = 1;
  string m = 2;
  reserved 3; // bool exclude_deleted
}

message UserPlaylistListResponse {
  repeated PlaylistSyncResponse playlists = 1;
}

message PlaylistSyncResponse {
  string uuid = 1;
  google.protobuf.BoolValue is_deleted = 2;
  string title = 3;
  google.protobuf.Int32Value audio_video = 4;
  google.protobuf.BoolValue not_downloaded = 5;
  google.protobuf.BoolValue downloaded = 6;
  reserved 7; // google.protobuf.BoolValue downloading
  google.protobuf.BoolValue finished = 8;
  google.protobuf.BoolValue partially_played = 9;
  google.protobuf.BoolValue unplayed = 10;
  google.protobuf.BoolValue starred = 11;
  google.protobuf.BoolValue manual = 12;
  google.protobuf.Int32Value sort_position = 13;
  google.protobuf.Int32Value sort_type = 14;
  google.protobuf.Int32Value icon_id = 15;
  google.protobuf.BoolValue all_podcasts = 16;
  google.protobuf.Int32Value filter_hours = 17;
  string podcast_uuids = 18;
  reserved 19; // string episode_uuids
  string original_uuid = 20;
  google.protobuf.BoolValue filter_duration = 21;
  google.protobuf.Int32Value longer_than = 22;
  google.protobuf.Int32Value shorter_than = 23;
}

message PodcastRatingResponse {
    string podcast_uuid = 1;
    google.protobuf.Timestamp modified_at = 3;
    uint32 podcast_rating = 4;
}

message PodcastRatingAddRequest {
    string podcast_uuid = 1;
    uint32 podcast_rating = 2;
}

message PodcastRatingShowRequest {
    string podcast_uuid = 1;
}

message PodcastRatingsResponse {
  repeated PodcastRating podcast_ratings = 1;
}

message PodcastRating {
  string podcast_uuid = 1;
  reserved 2; // Undefined field
  google.protobuf.Timestamp modified_at = 3;
  uint32 podcast_rating = 4;
}

message SupportFeedbackRequest {
    string message = 1;
    string email = 2;
    string subject = 3;
    string debug = 4;
    string inbox = 5;
}

message ReferralCodeResponse {
    string code = 1;
    string url = 2;
}

message ReferralValidationResponse {
    string offer = 1;
    int32 platform = 2;
    string details = 3;
}

message ReferralRedemptionRequest {
    string code = 1;
}

message ReferralRedemptionResponse {
    string code = 1;
}

message WinbackResponse {
  string offer = 1;
  string platform = 2;
  string details = 3;
  string code = 4;
}
